force-app/main/default/objects/Activity_Log__c/Activity_Log__c.object-meta.xml
<CustomObject>
    <label>Activity Log</label>
    <nameField>
        <label>Activity Log Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ActivityLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>