force-app/main/default/objects/Activity_Log__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Activity</label>
    <referenceTo>Activity__c</referenceTo>
    <relationshipLabel>ActivityLogs</relationshipLabel>
    <relationshipName>ActivityLogs</relationshipName>
    <type>Lookup</type>
</CustomField>